@@ -47,8 +47,6 @@ sub run_hook {
 
     $git->load_plugins();
 
-    my $errors = 0;             # Count number of errors found
-
     # Call every hook function installed by the hook scripts before.
     for my $hook (@{$Hooks{$hook_basename}}) {
         my ($package) = subname($hook) =~ m/^(.+)::/;
@@ -58,7 +56,6 @@ sub run_hook {
             # If they fail they invoke
             # Git::Repository::Plugin::GitHooks::error.
             unless ($ok) {
-                $errors += 1;
                 # Let's see if there is a help-on-error message configured
                 # specifically for this plugin.
                 (my $CFG = $package) =~ s/.*::/githooks./;
@@ -67,7 +64,6 @@ sub run_hook {
                 }
             }
         } elsif (length $@) {
-            $errors += 1;
             # Old hooks die when they fail...
             $git->error(__PACKAGE__ . "($hook_basename)", "Hook failed", $@);
         } else {
@@ -83,23 +79,12 @@ sub run_hook {
         $post_hook->($hook_basename, $git, @args);
     }
 
-    if ($errors || scalar($git->get_errors())) {
-        # Let's see if there is a help-on-error message configured globally.
-        if (my $help = $git->get_config(githooks => 'help-on-error')) {
-            $git->error(__PACKAGE__, $help);
-        }
-
+    if (my $errors = $git->get_errors()) {
         if (($hook_basename eq 'commit-msg' or $hook_basename eq 'pre-commit')
                 and not $git->get_config(githooks => 'abort-commit')) {
-            warn <<"EOF";
-ATTENTION: To fix the problems in this commit, please consider
-amending it:
-
-        git commit --amend      # to amend it
-
-EOF
+            warn $errors;
         } else {
-            die "\n";
+            die $errors;
         }
     }
 
@@ -834,6 +819,33 @@ after the review is stored.
 Allowed values are NONE, OWNER, OWNER_REVIEWERS, and ALL.
 
 If not set, the default is ALL.
+
+=head2 githooks.error-header CMD
+
+This option specifies a command that should produce a multi-line string
+which will be used as a header prefixing the error messages, if there are
+any. The command is invoked using Perl's C<qx{CMD}> operator, with no error
+detection. Since the string will most probably appear at the user's terminal
+their lines should have no more than 70 characters or so.
+
+The following commands may give you an idea as to which commands to use:
+
+=over
+
+=item * L<fortune|https://en.wikipedia.org/wiki/Fortune_(Unix)>
+
+=item * L<cowsay|https://en.wikipedia.org/wiki/Cowsay>
+
+=item * C<fortune -s | cowsay>
+
+=item * C<GET 'http://api.icndb.com/jokes/random?limitTo=nerdy' | jq -r '.value.joke' | cowsay>
+
+=back
+
+=head2 githooks.error-footer CMD
+
+This option is similar to the C<githooks.error-header> above, but produces a
+footer to the error messages generated by Git::Hooks, if any.
 
 =head2 githooks.help-on-error MESSAGE
 
